# tensorrt_inference

./: CMakeLists.txt  README.md  Utils.h  cudaconvertion.cu  cudaconvertion.h  test.cpp  trt_inference.cpp  trt_inference.h
